objects/Initiative_Objective__c.object
<CustomObject>
    <description>An Objective related to an Executive Initiative</description>
    <fields>
        <fullName>Completion_Pct__c</fullName>
        <description>The completion percentage for the Initiative Objective item</description>
        <inlineHelpText>The completion percentage for the Initiative Objective item</inlineHelpText>
        <label>Completion Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Initiative Objective</description>
        <inlineHelpText>Description of the Initiative Objective</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>The Initiative to which this Objective belongs</description>
        <inlineHelpText>The Initiative to which this Objective belongs</inlineHelpText>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiative Objectives</relationshipLabel>
        <relationshipName>Initiative_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Objective_Name__c</fullName>
        <description>The name of the Initiative Objective</description>
        <inlineHelpText>The name of the Initiative Objective</inlineHelpText>
        <label>Objective Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The priority of the Initiative Objective item</description>
        <inlineHelpText>The priority of the Initiative Objective item</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative Objective</label>
    <nameField>
        <displayFormat>EIO-{00000}</displayFormat>
        <label>Objective ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Completion_Pct_Range_Valid</fullName>
        <active>true</active>
        <description>Check if the Range for the Completion Pct field is between 0 and 100</description>
        <errorConditionFormula>OR(
   Completion_Pct__c &gt; 1.0,
   Completion_Pct__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>Completion_Pct__c</errorDisplayField>
        <errorMessage>Completion Percentage should be between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>